Fri Jun 18 23:12:22 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_save_safe_level, rb_set_safe_level, safe_setter): limit
	  safe level.

Wed Jun 16 23:05:57 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_mod_freeze): prepare string representation before
	  freezing. [ruby-talk:103646]

Wed Jun 16 19:57:24 2004  Michal Rokos  <michal@ruby-lang.org>

	* test/ruby/test_array.rb: extend testcase to check #first, #last,
	  #shift, #unshift, #pop, #push

Wed Jun 16 16:05:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_new): move alloc behind checks.  [ruby-core:02982]

	* array.c (rb_ary_pop_m, rb_ary_shift_m): take arg to behave as push
	  and unshift.

	* array.c (rb_ary_first, rb_ary_last): make shared array for result
	  array, and correct doc for Array#first(n) and Array#last(n)

	* array.c (rb_ary_select): not accept any arg.

Wed Jun 16 16:03:59 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_class_inherited_p): singleton class inherits Class
	  rather than its object's class.  [ruby-dev:23690]

Wed Jun 16 16:01:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (stack_grow_direction): memoize the direction.

	* gc.c (Init_stack): should always move to end of VALUE.

Tue Jun 15 12:10:04 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: bug fix (TkWindow#grab)

Mon Jun 14 18:23:27 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/remote-tk.rb: bug fix

Sun Jun 13 00:23:04 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/extconf.rb: [EXPERIMENTAL] MacOS X (darwin) support

	* ext/tcltklib/tcltklib.c: fix thread trouble on callback proc, and
	                   eliminate warning about instance variable access

	* ext/tk/lib/tk/menubar.rb: improve supported menu_spec

	* ext/tk/lib/tk/menuspec.rb: [add] menu_spec support library

	* ext/tk/lib/tk/root.rb: add menu_spec support

	* ext/tk/lib/tk/text.rb: bug fix
